--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Basics</title>
 </head>
 <body>
-    <i class="fab fa-500px"></i>
+
+    <h1>Ich einige mich mit meinen Freund auf den Vertrag.</h1>
     <script src="script.js"></script>
 </body>
 </html>
